--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-face-snape></app-face-snape>
+<app-face-snape [faceSnap]="mySnap"></app-face-snape>
+<app-face-snape [faceSnap]="mySnap2"></app-face-snape>
+<app-face-snape [faceSnap]="mySnap3"></app-face-snape>
