ngStyle ---> Modification du Style grace a l instruction [ngStyle]

--- a/src/app/face-snape/face-snape.component.html
+++ b/src/app/face-snape/face-snape.component.html
@@ -7,6 +7,6 @@
     <p *ngIf="faceSnap.location"> Photo prise  a {{faceSnap.location}}</p>
     <p>
         <button (click)="onChangeSnaps()">{{boutonText}}</button>
-        👩‍🦰🙄{{faceSnap.snap}}
+        <span [ngStyle]="{color: 'rgb(0,'+ faceSnap.snap + ',0)'}">😁🙄{{faceSnap.snap}} </span>
     </p>
 </div>
