--- a/src/app/face-snape/face-snape.component.scss
+++ b/src/app/face-snape/face-snape.component.scss
@@ -1,6 +1,32 @@
 .face-snap-card {
-  width: 35%;
+  box-sizing: border-box;
+  margin: 10px auto;
+  padding: 10px 30px ;
+  width: 50%;
+  box-shadow: lightgray 4px 4px 20px;
   img {
     width: 100%;
+  }
+  h1{
+    margin-bottom: 0;
+  }
+  p{
+    font-weight: 300;
+    font-size: 16px;
+  }
+  button {
+    background-color: transparent;
+    box-sizing: border-box;
+    padding: 5px 10px;
+    border: none;
+    box-shadow: lightgray 3px 3px 7px;
+    margin-right: 20px;
+    outline: none;
+    font-size: 14px;
+    font-weight: 500;
+    &:active {
+      transform: translate(1px, 1px);
+      box-shadow: lightgray 0 0 5px;
+    }
   }
 }
