ngClass ---> Modification de Class grace a la directive [ngClass]

--- a/src/app/face-snape/face-snape.component.html
+++ b/src/app/face-snape/face-snape.component.html
@@ -1,4 +1,4 @@
-<div class="face-snap-card">
+<div class="face-snap-card" [ngClass]="{snapped: boutonText === 'Oops, un Snap!'}">
     <h1>{{faceSnap.title}}</h1>
     <p>Mise en ligne le {{faceSnap.creationDate}}</p>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
