Partager les donnees avec les services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-face-snape *ngFor="let mySnap of faceSnaps" [faceSnap]="mySnap"></app-face-snape>
+<app-header></app-header>
+<app-face-snap-list></app-face-snap-list>
