--- a/src/app/face-snape/face-snape.component.scss
+++ b/src/app/face-snape/face-snape.component.scss
@@ -36,7 +36,7 @@
   color: darkgreen;
   button {
     box-shadow: lightgreen 3px 3px 7px;
-    color: darkblue;
+    color: rgba(245, 30, 7, 0.68);
     &:active {
       box-shadow: lightgreen 0 0 5px;
     }
