--- a/src/app/face-snape/face-snape.component.html
+++ b/src/app/face-snape/face-snape.component.html
@@ -4,7 +4,7 @@
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
     <p>{{faceSnap.description}}</p>
 <!--    Cette directive permet d ajouter un comportement-->
-    <p *ngIf="faceSnap.location"> Photo prise  a {{faceSnap.location}}</p>
+    <p *ngIf="faceSnap.location"> Photo prise  {{faceSnap.location}}</p>
     <p>
         <button (click)="onChangeSnaps()">{{boutonText}}</button>
         <span [ngStyle]="{color: 'rgb(0,'+ faceSnap.snap + ',0)'}">😁🙄{{faceSnap.snap}} </span>
