Passez d'une route a une autre

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,8 @@
 <header>
     <h1>snap face</h1>
+    <nav>
+        <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+        <a routerLink="facesnaps" routerLinkActive="active">FaceSnaps</a>
+    </nav>
 </header>
 
