--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <div class="landing-block">
     <img src="assets/Images/vincent-van-gogh.jpg" alt="Nuit Etoile logo">
     <div class="landing-links">
-        <a>Continuer vers Snapface</a>
+        <button (click)="onContinue()">Continuer vers Snapface</button>
     </div>
 </div>
